# ai-cli-runner

./: .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml  ruff.toml  tox.toml
examples/: basic_call.py  model_listing.py  session_usage.py  with_pricing.py
src/ai_cli_runner/: __init__.py  ai_models.py  client.py  llm_pricing.py  models.py  parallel.py  parsers.py  providers.py
tests/: conftest.py  test_ai_models.py  test_client.py  test_llm_pricing.py  test_models.py  test_parallel.py  test_parsers.py  test_providers.py
