[project]
name = "ai-cli-runner"
version = "0.3.0"
description = "Shared async Python package for calling AI CLI tools (Claude, Gemini, Cursor) via subprocess"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "python-simple-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cli_runner"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "simple_logger.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist",
    "ruff>=0.15.11",
]
